Add unit tests with assertJ and include sonar scanner to check quality of the code.