@@ -7,7 +7,6 @@ import com.naveen.devices.converter.DeviceConverter;
 import com.naveen.devices.service.DeviceService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -16,7 +15,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/devices")
@@ -29,11 +27,9 @@ public class DeviceController {
 
     @PostMapping
     @Operation(summary = "Create a new device")
-    @ApiResponses({
-            @ApiResponse(responseCode = "201", description = "Device created successfully"),
-            @ApiResponse(responseCode = "400", description = "Invalid request"),
-            @ApiResponse(responseCode = "401", description = "Unauthorized")
-    })
+    @ApiResponse(responseCode = "201", description = "Device created successfully")
+    @ApiResponse(responseCode = "400", description = "Invalid request")
+    @ApiResponse(responseCode = "401", description = "Unauthorized")
     public ResponseEntity<DeviceResponse> createDevice(@Valid @RequestBody final DeviceRequest request) {
         final DeviceResponse response = deviceConverter.toResponse(deviceService.createDevice(request));
         return ResponseEntity.status(HttpStatus.CREATED).body(response);
@@ -41,11 +37,9 @@ public class DeviceController {
 
     @PutMapping("/{id}")
     @Operation(summary = "Update an existing device")
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Device updated successfully"),
-            @ApiResponse(responseCode = "404", description = "Device not found"),
-            @ApiResponse(responseCode = "400", description = "Invalid request")
-    })
+    @ApiResponse(responseCode = "200", description = "Device updated successfully")
+    @ApiResponse(responseCode = "404", description = "Device not found")
+    @ApiResponse(responseCode = "400", description = "Invalid request")
     public ResponseEntity<DeviceResponse> updateDevice(
             @PathVariable final Long id,
             @Valid @RequestBody final DeviceRequest request) {
@@ -55,10 +49,8 @@ public class DeviceController {
 
     @GetMapping("/{id}")
     @Operation(summary = "Get a device by ID")
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Device retrieved successfully"),
-            @ApiResponse(responseCode = "404", description = "Device not found")
-    })
+    @ApiResponse(responseCode = "200", description = "Device retrieved successfully")
+    @ApiResponse(responseCode = "404", description = "Device not found")
     public ResponseEntity<DeviceResponse> getDevice(@PathVariable Long id) {
         final DeviceResponse response = deviceConverter.toResponse(deviceService.getDevice(id));
         return ResponseEntity.ok(response);
@@ -66,50 +58,42 @@ public class DeviceController {
 
     @GetMapping
     @Operation(summary = "Get all devices")
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Devices retrieved successfully")
-    })
+    @ApiResponse(responseCode = "200", description = "Devices retrieved successfully")
     public ResponseEntity<List<DeviceResponse>> getAllDevices() {
         List<DeviceResponse> responses = deviceService.getAllDevices()
                 .stream()
                 .map(deviceConverter::toResponse)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(responses);
     }
 
     @GetMapping("/brand/{brand}")
     @Operation(summary = "Get devices by brand")
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Devices retrieved successfully")
-    })
+    @ApiResponse(responseCode = "200", description = "Devices retrieved successfully")
     public ResponseEntity<List<DeviceResponse>> getDevicesByBrand(@PathVariable final String brand) {
         List<DeviceResponse> responses = deviceService.getDevicesByBrand(brand)
                 .stream()
                 .map(deviceConverter::toResponse)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(responses);
     }
 
     @GetMapping("/state/{state}")
     @Operation(summary = "Get devices by state")
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Devices retrieved successfully")
-    })
+    @ApiResponse(responseCode = "200", description = "Devices retrieved successfully")
     public ResponseEntity<List<DeviceResponse>> getDevicesByState(@PathVariable final DeviceState state) {
-        List<DeviceResponse> responses = deviceService.getDevicesByState(state)
+        final List<DeviceResponse> responses = deviceService.getDevicesByState(state)
                 .stream()
                 .map(deviceConverter::toResponse)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(responses);
     }
 
     @PatchMapping("/{id}")
     @Operation(summary = "Partially update a device")
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Device updated successfully"),
-            @ApiResponse(responseCode = "404", description = "Device not found"),
-            @ApiResponse(responseCode = "400", description = "Invalid request")
-    })
+    @ApiResponse(responseCode = "200", description = "Device updated successfully")
+    @ApiResponse(responseCode = "404", description = "Device not found")
+    @ApiResponse(responseCode = "400", description = "Invalid request")
     public ResponseEntity<DeviceResponse> partialUpdate(
             @PathVariable Long id,
             @RequestBody DeviceRequest request) {
@@ -119,11 +103,9 @@ public class DeviceController {
 
     @DeleteMapping("/{id}")
     @Operation(summary = "Delete a device")
-    @ApiResponses({
-            @ApiResponse(responseCode = "204", description = "Device deleted successfully"),
-            @ApiResponse(responseCode = "404", description = "Device not found"),
-            @ApiResponse(responseCode = "400", description = "Invalid request")
-    })
+    @ApiResponse(responseCode = "204", description = "Device deleted successfully")
+    @ApiResponse(responseCode = "404", description = "Device not found")
+    @ApiResponse(responseCode = "400", description = "Invalid request")
     public ResponseEntity<Void> deleteDevice(@PathVariable final Long id) {
         deviceService.deleteDevice(id);
         return ResponseEntity.noContent().build();
